# pccg-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compendium.json  config-dev.toml  config.toml  docker-compose.yml  test.Dockerfile
.github/workflows/: dockerpublish.yml  dockerpublishanddeploy.yml
engine/: Cargo.toml
engine/src/: api.rs  constants.rs  error.rs  experience.rs  job_board.rs  lib.rs
engine/tests/: api_integration_tests.rs
models/: Cargo.toml
models/src/: card.rs  character.rs  job.rs  lib.rs  stats.rs  user.rs
server/: Cargo.toml
server/src/: engine_handlers.rs  logging.rs  main.rs  routes.rs  schemas.rs
src/: main.rs
src/engine/: api.rs  constants.rs  error.rs  job_board.rs  mod.rs
src/models/: card.rs  character.rs  compendium.rs  config.rs  db.rs  job.rs  mod.rs  stats.rs  user.rs  user_registry.rs
src/server/: engine_handlers.rs  handlers.rs  health_handlers.rs  logging.rs  mod.rs  routes.rs  schemas.rs  server_config.rs  util.rs
src/storage/: db.rs  error.rs  firestore.rs  fs.rs  memory.rs  mod.rs  storage_driver.rs
storage/: Cargo.toml  fake_service_account.json
storage/src/: error.rs  firestore.rs  lib.rs
storage/tests/: firestore_integration_tests.rs
