[package]
name = "pccg-rs"
version = "0.1.0"
authors = ["circlesabound"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pccg-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "3.11", features = ["serde"] }
futures = "0.3"
hyper = "0.13"
http = "0.2"
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.2"
