[package]
name = "pccg-rs-models"
version = "0.1.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
edition = "2018"

[dependencies]
pccg-rs-storage = { path = "../storage" }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
num = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "v5", "serde"] }

[features]
default=[]
test_uses_network=[]
