[package]
name = "pccg-rs-server"
version = "0.1.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "pccg-rs"
path = "src/main.rs"

[dependencies]
pccg-rs-engine = { path = "../engine" }
pccg-rs-models = { path = "../models" }
pccg-rs-storage = { path = "../storage" }
http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["v4", "v5", "serde"] }
warp = "0.3"

[features]
default=[]
test_uses_network=[]
