[package]
name = "pccg-rs-storage"
version = "0.1.0"
authors = ["circlesabound <circlesabound@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"
jsonwebtoken = "7.2"
log = "0.4"
num = "0.3"
percent-encoding = "2.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "v5", "serde"] }

[dev-dependencies]
env_logger = "0.7"

[features]
default=[]
test_requires_secrets=[]

[[test]]
name = "firestore_integration_tests"
required-features = ["test_requires_secrets"]
